Fixed - scrollable white space underneath the footer of all page.

--- a/system/assets/css/admin/frontend/$toolbar.less.css
+++ b/system/assets/css/admin/frontend/$toolbar.less.css
@@ -63,6 +63,8 @@
 .preside-admin-toolbar .preside-admin-toolbar-actions label {
   font-size: 12px;
 }
-body {
+
+/*body {
   padding-bottom: 100px !important;
 }
+*/
